--- a/jsp-tutorials/webapp/WEB-INF/conf/flows.properties
+++ b/jsp-tutorials/webapp/WEB-INF/conf/flows.properties
@@ -1,6 +1,8 @@
 #controller=targetView
-add=list.jsp
-list=list.jsp
 edit=new.jsp
+list=list.jsp
 confirm=confirm.jsp
+details=confirm.jsp
+update=list.jsp
 delete=list.jsp
+add=list.jsp
