--- a/jsp-tutorials/webapp/WEB-INF/conf/apl/model.properties
+++ b/jsp-tutorials/webapp/WEB-INF/conf/apl/model.properties
@@ -1,7 +1,7 @@
 edit=
+confirm=
+details=
 list=com.mmju.jsp.ep6.model.Md_select
-confirm=confirm.jsp
-details=confirm.jsp
-update=list.jsp
-delete=list.jsp
-add=list.jsp
+update=com.mmju.jsp.ep6.model.Md_Update,com.mmju.jsp.ep6.model.Md_select
+delete=com.mmju.jsp.ep6.model.Md_Delete,com.mmju.jsp.ep6.model.Md_select
+add=com.mmju.jsp.ep6.model.Md_add,com.mmju.jsp.ep6.model.Md_select
